# pylang

./: .gitignore  Async.md  CMakeLists.txt  GC.md  IREmitter.md  classastAOT.md  current_errors.txt  export.md  failed.md  fix.md  module_refactor.md  perf.md  perf2.md  perfdoc.md  perfdoc_v2.md  perfdoc_v3.md  perfdoc_v4.md  perftodo.md  promble.md  stack.md  test.ll  test.py  test2.py  test3.py  todo.md  top-down-tree.md  try-except.md
.github/workflows/: premerge.yml
back/: Arena.hpp  BKPyObject.cpp.bak  BuiltinsModule.cpp  CMakeLists.txt  GCTracingAllocator.hpp  step.md
cmake/: EmbedResources.cmake
doc/: complexity.md  gcdescr.md  gcinterface.md
integration/: program.cpp
refactor_log/: 26_2_21.md  AOTframe.md  Async.md  GC.md  Multi-file-compilation.md  codegen.md  compile.md  export.md  log.md  perf.md  prototype.md  taggered.md  导出可能的缺失清单.md
src/: CMakeLists.txt  forward.hpp
src/ast/: AST.cpp  AST.hpp
src/ast/optimizers/: ConstantFolding.cpp  Optimizers_tests.cpp
src/compiler/Codegen/: CodegenContext.hpp  IREmitter.cpp  IREmitter.hpp  IREmitter_test.cpp  PylangCodegen.cpp  PylangCodegen.hpp  PylangCodegen_test.cpp
src/compiler/Driver/: _SimpleDriver.cpp  _SimpleDriver.hpp  _SimpleDriver_option.hpp  _SimpleDriver_test.cpp
src/compiler/Driver/_SimpleDriverExecEntry/: CompilerEntry.cpp
src/compiler/RuntimeLinker/: RuntimeLinker.cpp  RuntimeLinker.hpp  RuntimeLinker_option.hpp  RuntimeLinker_test.cpp
src/compiler/Support/: LLVMUtils.hpp  LLVMUtils_test.cpp  ScopeTimer.hpp
src/executable/bytecode/: Bytecode.cpp
src/executable/bytecode/codegen/: BytecodeGenerator.cpp
src/executable/bytecode/instructions/: BuildString.cpp  DeleteAttr.cpp  DeleteAttr.hpp  DictAdd.cpp  DictAdd.hpp  DictMerge.cpp  DictMerge.hpp  DictUpdate.cpp  DictUpdate.hpp  ForIter.cpp  FunctionCall.cpp  FunctionCallEx.cpp  FunctionCallEx.hpp  FunctionCallWithKeywords.cpp  GetIter.cpp  GetYieldFromIter.cpp  GetYieldFromIter.hpp  ImportName.cpp  ImportName.hpp  ImportStar.cpp  JumpIfExceptionMatch.cpp  JumpIfExceptionMatch.hpp  JumpIfNotExceptionMatch.cpp  JumpIfNotExceptionMatch.hpp  ListAppend.cpp  ListAppend.hpp  ListExtend.cpp  ListToTuple.cpp  ListToTuple.hpp  LoadAttr.cpp  LoadDeref.cpp  LoadDeref.hpp  LoadFast.cpp  LoadFast.hpp  LoadGlobal.cpp  LoadGlobal.hpp  MakeFunction.cpp  MakeFunction.hpp  MethodCall.cpp  RaiseVarargs.cpp  (+12 more)
src/executable/bytecode/serialization/: deserialize.hpp  serialize.hpp
src/executable/mlir/Dialect/Python/: MLIRGenerator.cpp
src/interpreter/: Interpreter.cpp
src/memory/: Arena.cpp  Arena.hpp  ArenaManager.cpp  ArenaManager.hpp  Arena_tests.cpp  Boehm_GCSetup.cpp  GCTracingAllocator.hpp  GarbageCollector.hpp  GarbageCollector_tests.cpp  Heap_tests.cpp  ScopedRegion.hpp
src/parser/: Parser.cpp  Parser_tests.cpp
src/repl/: repl.cpp
src/runtime/: AruntimeDIR.md  AssertionError.cpp  AssertionError.hpp  AttributeCache.hpp  AttributeError.cpp  AttributeError.hpp  BaseException.cpp  BaseException.hpp  ClassBuilder.cpp  ClassBuilder.hpp  CustomPyObject.cpp  Exception.cpp  Exception.hpp  ExceptionTransport.hpp  GeneratorInterface.cpp  GeneratorInterface.hpp  Import.cpp  Import.hpp  ImportError.cpp  ImportError.hpp  IndexError.cpp  IndexError.hpp  KeyError.cpp  KeyError.hpp  KeyVersionTracker.hpp  LookupError.cpp  LookupError.hpp  MemoryError.cpp  MemoryError.hpp  ModuleMangler.hpp  ModuleNotFoundError.cpp  ModuleNotFoundError.hpp  ModuleRegistry.cpp  ModuleRegistry.hpp  NameError.cpp  NameError.hpp  NotImplemented.cpp  NotImplemented.hpp  NotImplementedError.cpp  NotImplementedError.hpp  (+124 more)
src/runtime/export/: CMakeLists.txt  export.hpp  rt_attr.cpp  rt_class.cpp  rt_cmp.cpp  rt_common.hpp  rt_convert.cpp  rt_create.cpp  rt_error.cpp  rt_func.cpp  rt_fused.cpp  rt_lifecycle.cpp  rt_module.cpp  rt_op.cpp  rt_singleton.cpp  rt_subscr.cpp  rt_tuple.cpp
src/runtime/export/cache/: rt_cache.hpp  rt_method_cache.cpp
src/runtime/modules/: BuiltinsModule.cpp  CodecsModule.cpp  IOModule.cpp  ImpModule.cpp  Modules.hpp  PosixModule.cpp  SysModule.cpp  config.hpp
src/runtime/modules/collections/: DefaultDict.hpp  Deque.cpp  Deque.hpp
src/runtime/modules/errno/: module.cpp
src/runtime/modules/itertools/: Chain.hpp  Count.hpp  ISlice.hpp  Permutations.hpp  Product.cpp  Product.hpp  Repeat.hpp  StarMap.hpp
src/runtime/modules/signal/: module.cpp
src/runtime/modules/sre/: Match.cpp  Match.hpp  Pattern.cpp  Pattern.hpp  module.cpp
src/runtime/modules/thread/: Lock.hpp  RLock.hpp
src/runtime/modules/weakref/: PyCallableProxyType.cpp  PyCallableProxyType.hpp  PyWeakProxy.cpp  PyWeakProxy.hpp  PyWeakRef.cpp  PyWeakRef.hpp  WeakRefRegistry.hpp  module.cpp
src/runtime/taggered_pointer/: RtValue.cpp  RtValue.hpp
src/runtime/tests/: ModuleInit_tests.cpp  ProviderChain_tests.cpp  PyModule_add_symbol_tests.cpp  RuntimeAPI_tests.cpp  RuntimeContext_tests.cpp  Value_truthy_tests.cpp
src/runtime/types/: builtin.cpp  builtin.hpp
src/runtime/warnings/: DeprecationWarning.cpp  DeprecationWarning.hpp  ImportWarning.cpp  ImportWarning.hpp  PendingDeprecationWarning.cpp  PendingDeprecationWarning.hpp  ResourceWarning.cpp  ResourceWarning.hpp  Warning.cpp  Warning.hpp
src/testing/: main.cpp
src/vm/: StackFrame.hpp  VM.cpp  VM.hpp
